<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />
    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_below="@+id/btn_back"
        android:ems="10"
        android:hint="@string/question" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_send" />

    <ImageView
        android:id="@+id/ImgStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/disconnected" />
    
</RelativeLayout>